fixed golive modal on mobile
[#64696286] should work better now.

--- a/app/styles/_forms.scss
+++ b/app/styles/_forms.scss
@@ -176,6 +176,37 @@ body.base {
 			}
 		}
 	}
+	.modal {
+		color: $white;
+		background-color: rgb(76,28,10); // Old browsers
+		@include filter-gradient(#4c1c0a, #7f2f11, horizontal); // IE6-8 fallback on horizontal gradient
+// IE9 SVG, needs conditional override of 'filter' to 'none'
+		$experimental-support-for-svg: true;
+		@include background-image(linear-gradient(left bottom,  rgba(76,28,10,1) 0%,rgba(189,69,25,1) 36%,rgba(204,129,0,1) 60%,rgba(127,47,17,1) 100%));
+		border: 4px solid $white;
+		padding: 0 14px 18px;
+		@media screen and (max-width: 598px) {
+			width: 93%;
+			left: 0;
+			margin-left: 0;
+			border: none;
+			&.fade.in { top: 0;}
+		}
+		h2, h3, h4, h5, h6 { @include font-smoothing;}
+		.input-xxlarge { @media screen and (max-width: 598px){ width: 280px;}}
+		.btn { @include fontSize(16px);}
+		.close {
+			color: $white;
+			text-shadow: 0 1px 0 $black;
+			margin-top: 10px;
+			opacity: .5;
+			&:hover { opacity: .7;}
+			@media screen and (max-width: 598px) {
+				line-height: 30px;
+				font-size: 30px;
+			}
+		}
+	}
 }
 
 .alert {
